# graphenda-shared

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
graphenda_shared/: __init__.py  config.py
graphenda_shared/graph/: __init__.py  connection.py  models.py  queries.py
graphenda_shared/models/: __init__.py  core.py
graphenda_shared/registry/: __init__.py  models.py  reader.py
tests/: conftest.py  test_smoke.py
