[project]
name = "graphenda-shared"
version = "0.1.0"
description = "Shared models, configuration and Neo4j interface used by graphenda-build and graphenda-saas."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Graphenda"}]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "black>=24.0", "isort>=5.13", "mypy>=1.11", "pre-commit>=3.7"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
# TODO: definir remote Git em Decisao #2 do plano global
Homepage = "https://github.com/USER/graphenda-shared"
Repository = "https://github.com/USER/graphenda-shared"
Changelog = "https://github.com/USER/graphenda-shared/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphenda_shared"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["graphenda_shared", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["graphenda_shared"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
